Avoid showing invisible text

--- a/font-awesome.css
+++ b/font-awesome.css
@@ -14,6 +14,7 @@
   url('./fontawesome-webfont.svg?v=4.6.3#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 .fa {
   display: inline-block;
