--- a/refrigerator_deluxe.css
+++ b/refrigerator_deluxe.css
@@ -19,4 +19,5 @@
 @font-face {
   font-family: "RefrigeratorDeluxeExtrabold";
   src: url('./font.woff2') format('woff2'), url('./font.woff') format('woff');
+  font-display: swap;
 }
